----------------------------------------------
                 TeamTalk
----------------------------------------------

Version 5.17.1, unreleased
Default Qt Client
- Support "{username}" variable for majority of TTS and status events related to user action
- Fixed gender changed from female to male when migrating to 5.17 release
Android Client
-
iOS Client
-
Server
-

Version 5.17, 2024/08/15
Default Qt Client
- "Connect to a Server" and "User Accounts" dialog simplified with multiple sub dialogs
- Redesigned "Sound Events" and "Shortcuts" tabs in "Preferences" dialog
- Table view instead of tree view in "Online Users", "User Accounts", "Banned Users", "Server List", "File List", "Server Properties" and "Preferences" dialogs
- Use Qt checkable flag in user rights list of "User Accounts" dialog to allow screenreader to see if an item is checked
- Fixed state of checkable items in "Preferences", "User Account", "Server properties" dialogs not announce by Voice Over on MacOS
- Fixed labels of edit fields in "Custom Video Format" dialog
- Replaced readonly edit fields by labels in "User Info" and "Server Statistics" dialogs
- Radio buttons for Gender, Sound System and Status mode changed to combo boxes
- Context menu to move banned/unbanned users to banned/unbanned list in "Banned Users" dialog
- "Move Users" dialog from "Users" -> "Advanced" menu item
- "Check for Update" in "Help" menu
- Playback mode "Default" for sound events now also use TeamTalk selected sound device
- Menu to insert MOTD variables in "Server Properties" dialog
- Ability to "join last joined channel" for each server
- Ability to leave current channel from everywhere in main window
- Ability to customize some TTS and status bar messages
- Ability to customize date and time format
- Ability to replace existing file on upload
- Ability to copy all User Info to clipboard in "User Info" dialog
- Ability to sort Ban List
- Ability to hide some elements of main window